# Mechanic

./: !Mechanic.toc  .claudeignore  .gitignore  .ignore  .luacheckrc  .mcp.json  .pkgmeta  AGENTS.md  ANNOUNCE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Core.lua  DEBUG.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  Settings.lua  Utils.lua  embeds.xml
!Mechanic/: !Mechanic.toc  AGENTS.md  Bindings.xml  Bootstrap.lua  CHANGELOG.md  Core.lua  MechanicQueue.lua  README.md  Utils.lua  embeds.xml
!Mechanic/Libs/: libs.json
!Mechanic/Locales/: deDE.lua  enGB.lua  enUS.lua  esES.lua  esMX.lua  frFR.lua  itIT.lua  koKR.lua  ptBR.lua  ptPT.lua  ruRU.lua  zhCN.lua  zhTW.lua
!Mechanic/UI/: API.lua  APIDefinitions.lua  APIDefinitions_Registry.lua  Console.lua  Errors.lua  Inspect.lua  InspectDetails.lua  InspectProperties.lua  InspectTree.lua  InspectWatch.lua  MainFrame.lua  Performance.lua  Tests.lua  Tools.lua
.agent/: AGENTS.md
.agent/workflows/: audit.md  clean.md  debug.md  develop.md  lint.md  release.md  research.md  review.md  test.md
.claude/: AGENTS.md  settings.json  settings.local.json  sync-ide.ps1
.claude/commands/: c-audit.md  c-clean.md  c-debug.md  c-develop.md  c-lint.md  c-release.md  c-research.md  c-review.md  c-test.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Libs/AceHook-3.0/: AceHook-3.0.lua
Libs/FenUI/: CHANGELOG.md  FenUI.xml
Libs/MechanicLib/: MechanicLib.lua
Libs/Profiler/: Profiler.lua
Locales/: enUS.lua
Mechanic/: AGENTS.md  Bindings.xml  CHANGELOG.md  Core.lua  Mechanic.toc  README.md  Settings.lua  Utils.lua  embeds.xml
Mechanic/Libs/: libs.json
Mechanic/Locales/: deDE.lua  enGB.lua  enUS.lua  esES.lua  esMX.lua  frFR.lua  itIT.lua  koKR.lua  ptBR.lua  ptPT.lua  ruRU.lua  zhCN.lua  zhTW.lua
Mechanic/UI/: API.lua  APIDefinitions.lua  APIDefinitions_Registry.lua  Console.lua  Errors.lua  Inspect.lua  InspectDetails.lua  InspectProperties.lua  InspectTree.lua  InspectWatch.lua  Tests.lua  (+3 more)
PLAN/: 01-foundation.plan.md  02-error-tests.plan.md  03-performance.plan.md  04-migration.plan.md  06-extensibility.plan.md  07-api-bench.plan.md  08-inspect.plan.md  MASTER_PLAN.md  macos-support.plan.md
UI/: API.lua  APIDefinitions.lua  APIDefinitions_Registry.lua  Console.lua  Errors.lua  Inspect.lua  InspectDetails.lua  InspectProperties.lua  InspectTree.lua  InspectWatch.lua  MainFrame.lua  Performance.lua  Tests.lua  Tools.lua
_TemplateAddon/: .gitignore  AGENTS.md  LICENSE  README.md
desktop/: .env.example  README.md  config.json.example  pyproject.toml
desktop/dashboard/: index.html
desktop/scripts/: lua_dumper.lua  setup_dev_env.bat
desktop/src/afd/: __init__.py
desktop/src/afd/core/: __init__.py  errors.py  metadata.py  result.py
desktop/src/afd/server/: __init__.py
desktop/src/afd/testing/: __init__.py  assertions.py  fixtures.py
desktop/src/afd/transports/: __init__.py  base.py  fastmcp.py  mock.py
desktop/src/mechanic/: __init__.py  cli.py  config.py  docs_analyzer.py  lua_analyzer.py  mcp_server.py  parsers.py  server.py  setup.py  storage.py  utils.py  watcher.py
desktop/src/mechanic/commands/: __init__.py  api.py  apidefs.py  assets.py  atlas.py  complexity.py  core.py  deadcode.py  development.py  docs.py  environment.py  fencore.py  locale.py  lua.py  output.py  perf.py  release.py  research.py  sandbox.py  security.py  staledocs.py  tools.py
desktop/tests/: test_cli.py  test_commands.py  test_complexity.py  test_deadcode.py  test_security.py  test_staledocs.py
docs/: addon-architecture.md  addon-integration.md  cli-reference.json  cli-reference.md  migration-from-addon-dev.md
sandbox/: AFD_FOR_ADDONS.md  PLAN.md
(+553 files in other folders)
